--- a/index.html
+++ b/index.html
@@ -674,7 +674,54 @@
 
         <!-- footer -->
         <footer>
-            <div class="py-12 border border-t border-gray-100">
+         
+         <div class="py-12 border border-t border-gray-100">
+
+            <div class="container mx-auto">
+                <div class="grid mx-5 grid-cols-2 sm:grid-cols-2 md:grid-cols-4 gap-5 text-center">
+                    <div>
+                        <p class="text-base font-semibold text-gray-400 mb-3">SOLUTIONS</p>
+                        <div class="space-y-3">
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Marketing</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Analytics</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Commerce</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Insights</a>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="text-base font-semibold text-gray-400 mb-3">SUPPORT</p>
+                        <div class="space-y-3">
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Pricing</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Documentation</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Guides</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">API Status</a>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="text-base font-semibold text-gray-400 mb-3">COMPANY</p>
+                        <div class="space-y-3">
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">About</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Blog</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Jobs</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Press</a>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="text-base font-semibold text-gray-400 mb-3">LEGAL</p>
+                        <div class="space-y-3">
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Claim </a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Privacy</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Policy</a>
+                            <a href="" class="font-semibold text-gray-500 block hover:text-gray-900">Terms</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+         </div>   
+
+
+        <div class="py-12 border border-t border-gray-100">
                 <div class="container mx-auto ">
                     <div>
                         <div class="text-center">
@@ -699,16 +746,16 @@
                         </div>
                     </div>
                 </div>
-            </div>
+        </div>
 
-            <div class="bg-gray-800">
-                <div class="container mx-auto">
-                    <div class="grid grid-cols-1 text-center gap-5 py-5 md:grid-cols-2">
-                        <p class="text-base font-semibold text-white">© RAFCART - All Rights Reserved</p>
-                        <img class="w-64 h-5 m-auto" src="./images/methods.png" alt="">
-                    </div>
+        <div class="bg-gray-800">
+            <div class="container mx-auto">
+                <div class="grid grid-cols-1 text-center gap-5 py-5 md:grid-cols-2">
+                    <p class="text-base font-semibold text-white">© RAFCART - All Rights Reserved</p>
+                    <img class="w-64 h-5 m-auto" src="./images/methods.png" alt="">
                 </div>
             </div>
+        </div>
         </footer>
         <!-- footer end -->
     </main>
