login page and register page

--- a/shop.html
+++ b/shop.html
@@ -75,7 +75,7 @@
                         <a href="" class="text-gray-200 hover:text-white transition text-base font-semibold lg:text-xl">About Us</a>
                         <a href="" class="text-gray-200 hover:text-white transition text-base font-semibold lg:text-xl">Contact Us</a>
                     </div>
-                    <a href="" class="text-gray-200 hover:text-white transition text-base font-semibold lg:text-xl">Login/Register</a>
+                    <a href="register.html" class="text-gray-200 hover:text-white transition text-base font-semibold lg:text-xl">Login/Register</a>
                 </div>
             </div>
         </nav>
